fix logo on mobile

--- a/src/components/Sponsors/Makasar/Makasar.module.scss
+++ b/src/components/Sponsors/Makasar/Makasar.module.scss
@@ -87,7 +87,7 @@
     max-height: 60px;
   }
   @include screen(phone) {
-    max-height: 60px;
+    max-height: 72px;
   }
   @include screen(tablet) {
     max-height: 96px;
@@ -108,7 +108,7 @@
     max-height: 52px;
   }
   @include screen(phone) {
-    max-height: 52px;
+    max-height: 60px;
   }
   @include screen(tablet) {
     max-height: 84px;
@@ -129,7 +129,7 @@
     max-height: 56px;
   }
   @include screen(phone) {
-    max-height: 56px;
+    max-height: 60px;
   }
   @include screen(tablet) {
     max-height: 80px;
