--- a/src/components/Sponsors/Solo/Solo.module.scss
+++ b/src/components/Sponsors/Solo/Solo.module.scss
@@ -87,7 +87,7 @@
     max-height: 76px;
   }
   @include screen(phone) {
-    max-height: 76px;
+    max-height: 80px;
   }
   @include screen(tablet) {
     max-height: 108px;
