--- a/src/components/Sponsors/Surabaya/Surabaya.module.scss
+++ b/src/components/Sponsors/Surabaya/Surabaya.module.scss
@@ -4,23 +4,32 @@
   @include grid-row();
   align-items: center;
   justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+
   @include screen(smallPhone) {
     margin-bottom: 0;
+    width: 240px;
   }
   @include screen(phone) {
     margin-bottom: 0;
+    width: 280px;
   }
   @include screen(tablet) {
     margin-bottom: $space-ml;
+    width: 100%;
   }
   @include screen(tabletLandscape) {
     margin-bottom: $space-ml;
+    width: 100%;
   }
   @include screen(desktop) {
     margin-bottom: $space-ml;
+    width: 100%;
   }
   @include screen(desktopWide) {
     margin-bottom: $space-ml;
+    width: 100%;
   }
 }
 
@@ -105,7 +114,7 @@
     max-height: 52px;
   }
   @include screen(phone) {
-    max-height: 52px;
+    max-height: 56px;
   }
   @include screen(tablet) {
     max-height: 70px;
@@ -147,7 +156,7 @@
     max-height: 64px;
   }
   @include screen(phone) {
-    max-height: 64px;
+    max-height: 76px;
   }
   @include screen(tablet) {
     max-height: 92px;
@@ -168,7 +177,7 @@
     max-height: 64px;
   }
   @include screen(phone) {
-    max-height: 64px;
+    max-height: 70px;
   }
   @include screen(tablet) {
     max-height: 88px;
@@ -210,7 +219,7 @@
     max-height: 52px;
   }
   @include screen(phone) {
-    max-height: 52px;
+    max-height: 60px;
   }
   @include screen(tablet) {
     max-height: 84px;
@@ -231,7 +240,7 @@
     max-height: 72px;
   }
   @include screen(phone) {
-    max-height: 72px;
+    max-height: 80px;
   }
   @include screen(tablet) {
     max-height: 96px;
