--- a/src/styles/invoker-tokens/tokens/_breakpoints.scss
+++ b/src/styles/invoker-tokens/tokens/_breakpoints.scss
@@ -45,8 +45,8 @@ $max-375: 374px;
 $max-360: 359px;
 
 // Predefined breakpoints
-$max-mobile-small: $max-420;
-$min-mobile: $min-420;
+$max-mobile-small: $max-375;
+$min-mobile: $min-375;
 $min-tablet: $min-720;
 $min-tablet-landscape: $min-840;
 $min-desktop: $min-1080;
